--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/alackmann/openhab-blueair.git"
+    "url": "git://bitbucket.org/alackmann/openhab-blueair.git"
   },
   "bugs": {
     "url": "https://bitbucket.org/alackmann/openhab-blueair/issues"
